test_inputs/bad/invalid_override_3.lat
class A extends B {
    int do() {
        return 0;
    }
}

class B extends C {

}

class C {
    boolean do() {
        return true;
    }
}

int main() {
    return 0;
}
